# klaude-code

./: .coverage  .gitignore  .gitmodules  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEV.md  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  main.py  plan.md  pyproject.toml  pyrightconfig.json
.claude/: settings.local.json
.claude/commands/: pypi.md  version_bump_and_build.md
.claude/memories/: agent_config.md  codex_integration_progress.md  commit_pr_guidelines.md  publish_pypi.md  sub_agent_setup.md
.github/workflows/: pr-checks.yml
docs/: at_files.md  bedrock-setup.md  read_edit_tool.md  tui-queued-input-plan.md  tui-unified-renderer-plan.md  webui-runtime-architecture-design.md  webui-session-runtime-blueprint.md
docs/plans/: 2026-02-27-ask-user-question-interaction.md  2026-03-03-web-server-mvp-backend-zh.md  2026-03-03-web-server-mvp-frontend-zh.md  2026-03-03-web-server-mvp-zh.md  2026-03-03-web-server-mvp.md
docs/runtime-arch-refactor/: decision-record.md  migration-gap-register.md  phase-1-eventbus-plan.md  phase-2-runtimehub-plan.md  runtime-data-model.md  runtime-refactor-phases.md
docs/web/: 1-execution-architecture.md  2-frontend-and-api-design.md  3-current-api-spec.md  3-style-guide.md
scripts/: build_web.py  perf_repl_startup.py
src/agent/: agent.py
src/claudepy/: __init__.py  cli.py  message.py  tui.py
src/cli/: exec.py  main.py
src/config/: config.py
src/klaude_code/: const.py  log.py  update.py  version.py
src/klaudecode/: __init__.py  agent.py  agent_executor.py  agent_state.py  cli.py  config.py  input.py  llm.py  mcp_client.py  mcp_config.py  message.py  message_history.py  session.py  tool.py  tui.py  updater.py  user_command.py  user_input.py  user_input_command.py  user_input_mode.py  user_questionary.py  utils.py
src/llm/: __init__.py  client.py  registry.py
src/prompt/: system.py
src/protocal/: __init__.py  events.py  llm_parameter.py  model.py
src/protocol/: events.py  llm_parameter.py
src/session/: session.py
src/ui/: __init__.py  display_abc.py  input_abc.py  input_ptk.py  repl_display.py  repl_input.py  stdout.py  tui.py  ui.py
tests/: AGENTS.md  README.md  agent_harness.py  base.py  conftest.py  run_tests.py  test_agent.py  test_agent_executor.py  test_agent_profile_structured_output.py  test_agent_state.py  test_agent_task.py  test_anthropic_payload.py  test_app_runtime_close_session.py  test_apply_config_defaults.py  test_apply_patch.py  test_apply_patch_tool.py  test_apply_patch_tool_markdown.py  test_ask_user_question_integration.py  test_ask_user_question_tool.py  test_away_summary_coordinator.py  test_away_summary_runtime.py  test_backtrack.py  test_bash_highlight.py  test_bash_mode.py  test_bash_tool.py  test_bedrock_client.py  test_brave_search.py  test_builtin_config_api_keys.py  test_cache_break_detection.py  test_cli_auth_cmd.py  test_cli_optional_values.py  test_clipboard_manifest.py  test_codec.py  test_command_output_render.py  test_command_registry.py  test_command_safety.py  test_compaction_boundaries.py  test_compaction_integration.py  test_compaction_threshold.py  test_config.py  (+125 more)
tests/agent/: agent_harness.py  test_agent.py  test_agent_executor.py  test_agent_state.py  test_agent_task.py  test_attachments_files.py  test_attachments_files_truncation.py  test_away_summary_coordinator.py  test_away_summary_runtime.py  test_cache_break_detection.py  test_compaction_boundaries.py  test_compaction_helpers_characterization.py  test_compaction_integration.py  test_handoff.py  test_interactive_request_operations.py  test_interrupt_event_emission.py  test_memory.py  test_prompt_suggestion.py  test_read_edit.py  test_rewind.py  test_session_stats_operation.py  test_session_title_runtime.py  test_skill_trigger_attachment.py  test_step_first_token_timeout.py  test_sub_agent_registry.py  test_system_prompt.py  test_task_cache_hit_rate.py  test_task_checkpointing.py  test_task_compaction_failures.py  test_task_helpers_characterization.py  test_task_interrupt_persistence.py
tests/app/: test_auth_flow.py  test_herdr.py  (+2 more)
web/: .prettierignore  AGENTS.md  DESIGN.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts
(+1263 files in other folders)
