[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "klaude-code"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.66.0",
    "openai>=1.102.0",
    "pillow>=12.0.0",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "questionary>=2.1.1",
    "rich>=14.1.0",
    "typer>=0.17.3",
]

[project.scripts]
klaude = "klaude_code.cli.main:app"

[tool.hatch.build]
sources = ["src"]
include = [
    "src/klaude_code/**/*.py",
    "src/klaude_code/**/*.md",
]
artifacts = [
    "*.md",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "pyright>=1.1.407",
    "pytest>=8.4.1",
]



[tool.ruff]
line-length = 120
