[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "klaude-code"
version = "1.0.5"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.66.0",
    "openai>=1.102.0",
    "pillow>=12.0.0",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "questionary>=2.1.1",
    "rich>=14.1.0",
    "typer>=0.17.3",
]

[project.scripts]
klaude = "klaude_code.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/klaude_code"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.hatch.build.targets.wheel.force-include]
"src/klaude_code/command/prompt-dev-doc.md" = "klaude_code/command/prompt-dev-doc.md"
"src/klaude_code/command/prompt-init.md" = "klaude_code/command/prompt-init.md"
"src/klaude_code/command/prompt-update-dev-doc.md" = "klaude_code/command/prompt-update-dev-doc.md"
"src/klaude_code/core/prompt/prompt-claude-code.md" = "klaude_code/core/prompt/prompt-claude-code.md"
"src/klaude_code/core/prompt/prompt-codex.md" = "klaude_code/core/prompt/prompt-codex.md"
"src/klaude_code/core/prompt/prompt-gemini.md" = "klaude_code/core/prompt/prompt-gemini.md"
"src/klaude_code/core/prompt/prompt-subagent.md" = "klaude_code/core/prompt/prompt-subagent.md"
"src/klaude_code/core/prompt/prompt-subagent-explore.md" = "klaude_code/core/prompt/prompt-subagent-explore.md"
"src/klaude_code/core/prompt/prompt-subagent-oracle.md" = "klaude_code/core/prompt/prompt-subagent-oracle.md"
"src/klaude_code/core/tool/apply_patch_tool_instructions.md" = "klaude_code/core/tool/apply_patch_tool_instructions.md"

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "pyright>=1.1.407",
    "pytest>=8.4.1",
]



[tool.ruff]
line-length = 120
