[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[project]
name = "klaude-code"
version = "1.2.9"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.66.0",
    "openai>=1.102.0",
    "pillow>=12.0.0",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "questionary>=2.1.1",
    "rich>=14.1.0",
    "trafilatura>=2.0.0",
    "typer>=0.17.3",
]

[project.scripts]
klaude = "klaude_code.cli.main:app"

[tool.uv.build-backend]
module-name = "klaude_code"

[dependency-groups]
dev = [
    "import-linter>=2.6",
    "isort>=6.0.1",
    "pyright>=1.1.407",
    "pytest>=8.4.1",
    "pytest-cov>=7.0.0",
]



[tool.pytest.ini_options]
markers = [
    "network: marks tests as requiring network access (deselect with '-m \"not network\"')",
]

[tool.ruff]
line-length = 120

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
reportMissingImports = "warning"
reportMissingModuleSource = "warning"
exclude = [".venv/"]

[[tool.pyright.executionEnvironments]]
root = "."
extraPaths = ["src"]

[tool.importlinter]
root_packages = ["klaude_code"]
include_external_packages = false

[[tool.importlinter.contracts]]
name = "Layered architecture"
type = "layers"
layers = [
    "klaude_code.cli",
    "klaude_code.core",
    "klaude_code.session",
    "klaude_code.config",
    "klaude_code.llm",
    "klaude_code.protocol",
    "klaude_code.const",
]
